fix logo image overflow [chrome]

--- a/source/styles/partials/_component.logo.scss
+++ b/source/styles/partials/_component.logo.scss
@@ -8,5 +8,6 @@
   display: inline-block;
   width: 55px;
   height: 5px;
+  overflow: hidden;
   background-color: $white;
 }
